# farcaster-nft-miniapp

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
contracts/template/: Cargo.toml  package.json  rust-toolchain.toml
contracts/template/src/: lib.rs  main.rs
frontend/: index.html  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
frontend/public/.well-known/: farcaster.json
frontend/src/: App.tsx  wagmi.ts
frontend/src/abi/: SampleNFT.json
frontend/src/hooks/: usePublicClient.ts
public/.well-known/: farcaster.json
scripts/: funds.sh  package.json
src/: App.tsx  package.json  viemChains.ts  wagmi.ts
src/hooks/: usePublicClient.ts
